archive/manga-watch/manifests/manga-watch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manga-watch
  namespace: default
spec:
  selector:
    app: manga-watch
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
